Revision history for {{$dist->name}}

{{$NEXT}}
  - Text::Parser::RuleSpec provides syntactical sugar to subclass Text::Parser: applies_rule, unwraps_lines_using
  - New attribute line_wrap_style, new method custom_line_unwrap_routines in Text::Parser
  - Removed confusing POD documentation
  - Improved POD documentation to reflect latest features
  - Improved the Text::Parser manual

0.927     2019-06-22 20:35:56-07:00 America/Los_Angeles
  - Speed improvement: reduced runtime of read() calls to about 50% of original runtime.
  - Added an initial version of Text::Parser::RuleSpec. Not ready for use yet. Don't use this yet.

0.926     2019-06-21 11:48:08-07:00 America/Los_Angeles
  - Removed unnecessary module dependencies. Users can always use Import::Into when they need to add new functions (Issue #52)
  - Bug with shared variables not being removed after read call fixed (Issue #49)
  - Minor updates to documentation

0.925     2019-06-17 07:49:04-07:00 America/Los_Angeles
  - Changed the primary usage model from inheritance-based to regular use in main.
  - A new class for text parsing rules created Text::Parser::Rule (#17).
  - Import functions from String::Util, Scalar::Util, String::Util::Match, String::Util::Range, and String::Index.
    These can be accessed inside the ExAWK string rules directly (#44)
  - Added new methods to Text::Parser called add_rule to create rules (#37), and clear_rules to delete rules (#40)
  - Added new methods to Text::Parser called BEGIN_rule and END_rule (#47). The current line is not accessible in this rule.
  - Added new method join_range available when auto_split => 1 (#38)
  - Rules support range shortcuts like ${3+}, @{2+}, and \@{3+} (#39), (#45)
  - Added ability to create parse-time variables accessible across rules such as ~var (#48)

0.920     2019-06-09 19:48:42-07:00 America/Los_Angeles
  - Bug in new version of Dist::Zilla::Plugin::Test::MinimumVersion causes bug. Work-around provided (#35). See